--- a/package.json
+++ b/package.json
@@ -16,18 +16,23 @@
     "node",
     "setup"
   ],
-  "author": "",
+  "author": "Nick Gasson",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/nickg/setup-nvc-ci/issues"
   },
   "homepage": "https://github.com/nickg/setup-nvc-ci#readme",
+  "type": "module",
   "devDependencies": {
+    "@octokit/types": "^13.5.0",
     "@types/node": "^20.14.11",
     "@vercel/ncc": "^0.38.1",
+    "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1",
+    "@octokit/rest": "^21.0.1"
   }
 }
