--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
+    "@actions/tool-cache": "^2.0.1",
     "@octokit/rest": "^21.0.1"
   }
 }
