--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ 20.04, 22.04, latest ]
-        version: [ stable ]
+        os: [ 22.04, 24.04, latest ]
+        version: [ stable, latest, 1.12.0 ]
     runs-on: ubuntu-${{ matrix.os }}
     name: 'Ubuntu ${{ matrix.os }} - ${{ matrix.version }}'
     steps:
