--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "ncc build -o dist src/main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "eslint --fix .",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -25,10 +27,14 @@
   "type": "module",
   "devDependencies": {
     "@octokit/types": "^13.5.0",
+    "@stylistic/eslint-plugin": "^1.0.0",
     "@types/node": "^20.14.11",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "@vercel/ncc": "^0.38.1",
+    "eslint": "^8.49.0",
     "tsx": "^4.16.2",
-    "typescript": "^5.5.3"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
