--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ 22.04, 24.04, latest ]
-        version: [ stable, latest, 1.12.0 ]
+        version: [ latest, 1.12.0 ]
         exclude:
           - os: latest
             version: 1.12.0
